--- a/src/components/CartItem/index.css
+++ b/src/components/CartItem/index.css
@@ -1,7 +1,7 @@
 .cart-item {
     display: flex;
     align-items: center;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
     padding: 16px;
     margin-bottom: 16px;
     box-shadow: 0px 4px 16px 0px #eaebed;
@@ -47,7 +47,7 @@
   }
   
   .cart-product-title {
-    color: #171f46;
+    
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
@@ -62,7 +62,7 @@
   }
   
   .cart-product-brand {
-    color: #64748b;
+    /* color: #64748b; */
     font-family: 'Roboto';
     font-size: 10px;
   }
@@ -80,10 +80,14 @@
   
   .quantity-controller-button {
     padding: 0;
+    outline: none;
+    border-width: 0px;
+    background-color: transparent;
   }
   
+  
   .cart-quantity {
-    color: #52606d;
+    /* color: #52606d; */
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
@@ -105,8 +109,8 @@
   }
   
   .cart-total-price {
-    color: #0b69ff;
-    font-family: 'Roboto';
+    /* color: #0b69ff; */
+    /* font-family: 'Roboto'; */
     font-size: 16px;
     font-weight: 500;
     margin-top: 0;
@@ -122,7 +126,7 @@
   
   .remove-button {
     background-color: transparent;
-    color: #334155;
+    /* color: #334155; */
     font-family: 'Roboto';
     font-size: 10px;
     line-height: 16px;
@@ -150,3 +154,11 @@
       display: none;
     }
   }
+
+.cartProductTitle{
+  color: #171f46;
+}
+
+.cartTotalPrice{
+  color: #0b69ff;
+}
