--- a/src/components/Filters/index.css
+++ b/src/components/Filters/index.css
@@ -1,8 +1,34 @@
 .filters-container {
     margin-left: 40px;
   }
-  
-  .filters-heading {
-    font-size: 20px;
+
+
+@media screen and (max-width: 768px){
+  .filters-container{
+    margin-left: 0px;
   }
+}
   
+.filter-details-container{
+  margin-left: 20px;
+}
+
+.filterText{
+  height: 13px;
+  width: 13px;
+}
+
+.filterIcon{
+  border-width: 0px;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px){
+  .filterIcon{
+    font-size: 10px;
+  }
+}
