--- a/src/components/ProductCard/index.css
+++ b/src/components/ProductCard/index.css
@@ -1,14 +1,19 @@
+.productsCard-container{
+  margin-right: 50px;
+  margin-bottom: 20px;
+  padding-top: 50px;
+}
+
 .product-item {
     display: flex;
     flex-direction: column;
-    margin-bottom: 35px;
-    width: 250px;
+    width: 300px;
     height: 100%;
     flex-grow: 0;
     flex-shrink: 1;
-    margin-right: 30px;
     padding: 15px;
     border-radius: 8px;
+    margin-top: 20px;
   }
   
   @media screen and (max-width: 768px) {
@@ -88,3 +93,9 @@
     padding-bottom: 0px;
   }
   
+  .favIconContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    cursor: pointer;
+  }
