--- a/src/components/ProductDetails/index.css
+++ b/src/components/ProductDetails/index.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding-top: 30px;
   }
   
   @media screen and (max-width: 768px) {
@@ -79,12 +80,13 @@
     cursor: pointer;
   }
   .itemCount {
-    font-size: 15px;
+    font-size: 17px;
     font-family: 'Roboto';
     color: #616e7c;
-    padding-top: 20px;
+    /* padding-top: 20px; */
     padding-left: 30px;
     padding-right: 30px;
+    font-weight: bold;
   }
   
   .add-cart-button {
