--- a/src/components/Recommendations/index.css
+++ b/src/components/Recommendations/index.css
@@ -1,12 +1,13 @@
 .sort-by-select {
     color: #475569;
     background-color: #ffffff;
-    font-family: 'Roboto';
+    /* font-family: 'Roboto'; */
     font-size: 16px;
     font-weight: 500;
     border: none;
     outline: none;
     cursor: pointer;
+    font-weight: bold;
   }
   
   @media screen and (max-width: 768px){
@@ -15,11 +16,11 @@
     }
   }
     
-    .select-option {
-      color: #7e858e;
-      font-family: 'Roboto';
-      font-size: 14px;
-    }
+.select-option {
+    color: #7e858e;
+    font-family: 'Roboto';
+    font-size: 14px;
+}
   
     @media screen and (max-width: 768px){
       .select-option{
