--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -27,13 +27,14 @@
   .cart-heading {
     /* color: #3e4c59; */
     font-family: 'Roboto';
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
+    font-family: "Audiowide", sans-serif;
   }
   
   @media screen and (min-width: 768px) {
     .cart-heading {
-      font-size: 48px;
+      font-size: 30px;
     }
   }
   
