--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -38,20 +38,23 @@
 
   @media screen and (max-width: 967px){
     .logo{
-        margin-left: 40px;
+        margin-left: 25px;
     }
   }
   
-  .headerHeading {
-    font-size: 23px;
-    padding-left: 100px;
+  .font-effect-neon {
+    /* font-size: 23px; */
+    padding-left: 150px;
     font-weight: bold;
+    font-family: "Sofia", sans-serif;
+    font-size: 30px;
   }
   
   @media screen and (max-width: 768px) {
-    .headerHeading {
-      font-size: 20px;
-      padding-left: 0px;
+    .font-effect-neon {
+      font-size: 18px;
+      padding-left: 5px;
+      padding-bottom: 15px;
     }
   }
   
@@ -143,7 +146,7 @@
     list-style: none;
   }
   
-  .navLink {
+  .nav-links {
     text-decoration: none;
   }
   
