--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     min-height: 100vh;
+    padding-top: 130px;
   }
   
   @media screen and (min-width: 768px) {
