--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,13 +1,17 @@
 .header-container {
-    padding: 20px;
     padding-bottom: 0px;
-    padding-left: 10px;
+    position: fixed;
+    z-index: 9;
+    width: 100%;
+    padding-left: 30px;
+    background-color: #1f80c0;
   }
   
   .topHeader-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    
   }
   
   .logo {
@@ -23,7 +27,8 @@
 
   @media screen and (max-width: 768px){
     .nav-logo-container{
-        padding-bottom: 20px;
+        padding-bottom: 0px;
+        padding-top: 5px;
     }
   }
   
@@ -41,13 +46,18 @@
         margin-left: 25px;
     }
   }
+
+  /* .menu-icon{
+    margin-right: 200px;
+  } */
+
   
   .font-effect-neon {
-    /* font-size: 23px; */
-    padding-left: 150px;
+    padding-left: 200px;
     font-weight: bold;
     font-family: "Sofia", sans-serif;
-    font-size: 30px;
+    font-size: 25px;
+    position: relative;
   }
   
   @media screen and (max-width: 768px) {
@@ -55,6 +65,18 @@
       font-size: 18px;
       padding-left: 5px;
       padding-bottom: 15px;
+      padding-top: 10px;
+    }
+  }
+
+  .icons-container{
+    padding-right: 40px;
+    padding-top: 30px;
+  }
+
+  @media screen and (max-width: 768px) {
+    .icons-container{
+      margin-left: 10px;
     }
   }
   
@@ -101,6 +123,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    
   }
 
   .nav-items-container{
@@ -108,6 +131,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding-left: 0px;
   }
 
   @media screen and (max-width: 768px){
@@ -142,8 +166,15 @@
   .navItem {
     font-weight: bold;
     padding: 10px;
-    padding-top: 20px;
     list-style: none;
+    font-size: 14px;
+  }
+
+  @media screen and (max-width: 768px){
+    .navItem{
+      font-size: 10px;
+      padding-left: 0px;
+    }
   }
   
   .nav-links {
@@ -200,5 +231,27 @@
   @media screen and (min-width: 768px) {
     .cart-count-badge {
       background-color: #e6f6ff;
+    }
+  }
+
+  .search-box{
+    transition: .5s;
+    border: none;
+    border-bottom: 1px solid #aaaaaa;
+    background-color: transparent;
+    outline: none;
+    height: 30px;
+    width: 200px;
+    text-transform: capitalize;
+    font-weight: 500;
+    font-size: 16px;
+    border-bottom: 1px solid #1f80c0;
+    margin-left: 10px;
+    position: fixed;
+  }
+
+  @media screen and (max-width: 768px) {
+    .search-box{
+      width: 140px;
     }
   }
