--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,5 +1,15 @@
 .homeBg-container {
-    padding: 20px;
+    padding-top: 150px;
+    width: 100vw;
+    padding-right: 0px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #626060;
+  }
+
+  @media screen and (max-width: 768px){
+    .homeBg-container{
+      padding-top: 60px;
+    }
   }
   
   .heading-des-container {
@@ -10,8 +20,8 @@
   }
   
   .homeHeading {
-    font-weight: 400;
-    font-size: 47px;
+    font-weight: 500;
+    /* font-size: 40px; */
   }
   
   @media screen and (max-width: 768px) {
@@ -22,7 +32,7 @@
   
   .description {
     font-weight: 400;
-    font-size: 16px;
+    /* font-size: 16px; */
     text-align: center;
     width: 550px;
   }
@@ -33,32 +43,4 @@
       width: 100%;
     }
   }
-  
-  .filters-recommendations-totalItems-container {
-    padding: 40px;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .filters-recommendations-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  
-  .totalItems {
-    font-weight: 700;
-    font-size: 16px;
-    padding-top: 10px;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .totalItems {
-      display: none;
-    }
-  }
-  
+
