--- a/src/components/ProductCard/index.css
+++ b/src/components/ProductCard/index.css
@@ -1,78 +1,112 @@
 .productsCard-container{
-  margin-right: 50px;
-  margin-bottom: 20px;
-  padding-top: 50px;
+  position: relative;
+  transition: .5s;
+  padding: 10px;
+  margin: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
+
+.borderDark{
+  border: 1px solid #ffffff;
+}
+
+.borderLight{
+  border: 1px solid #000000;
+}
+
+.productsCard-container:hover{
+  transform: scale(1.1);
+}
+
 
 .product-item {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
     height: 100%;
     flex-grow: 0;
     flex-shrink: 1;
-    padding: 15px;
-    border-radius: 8px;
-    margin-top: 20px;
+    padding: 10px;
+    min-width: 150px;
+    max-width: 250px;
+    
   }
   
   @media screen and (max-width: 768px) {
     .product-item {
       margin-right: 0px;
+      width: 150px;
     }
+  }
+
+  .product_item_image_container{
+    display: flex;
+    align-items: center ;
+    justify-content: center;
+    height: 170px;
   }
   
   .productImage {
-    width: 100%;
-    height: 100%;
-    max-height: 350px;
-    border-radius: 6px;
+    width: 140px;
+    height: auto;
+    max-height: 150px;
+    padding: 10px;
   }
   
   .title {
-    font-size: 16px;
+    font-size: 12px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    width: 100%;
+    margin: 0;
     padding-top: 10px;
   }
   
   .category {
-    font-size: 14px;
+    font-size: 12px;
   }
   
   .price {
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
   }
   
   .rating-container {
     display: flex;
     align-items: center;
-    background-color: #3b82f6;
-    border-radius: 6px;
-    padding: 6px 16px;
+    background-image: linear-gradient(90deg, #8d07a8, #c710be);
+    border-radius: 4px;
+    padding: 4px 8px;
+    height: 20px;
   }
   
   .starImage {
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
     margin-bottom: 3px;
   }
   
   .rating {
-    font-weight: bold;
-    color: #ffffff;
-    font-family: 'Roboto';
-    font-size: 16px;
+    font-size: 11px;
     font-weight: 500;
-    margin-right: 4px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
   }
   
   .productDetails {
     display: flex;
+    width: 100%;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     margin-top: 2px;
+
   }
   
   .favoritesButton-container {
