--- a/src/components/ProductDetails/index.css
+++ b/src/components/ProductDetails/index.css
@@ -7,6 +7,7 @@
     flex-direction: row;
     align-items: center;
     padding-top: 30px;
+
   }
   
   @media screen and (max-width: 768px) {
@@ -17,7 +18,7 @@
   
   .productDetailsImage {
     height: 100%;
-    width: 400px;
+    width: 235px;
   }
   
   @media screen and (max-width: 768px) {
@@ -28,11 +29,11 @@
   
   .details-container {
     padding-left: 30px;
-    padding-top: 30px;
+    padding-top: 50px;
   }
   
   .productTitle {
-    font-size: 30px;
+    font-size: 25px;
     padding-bottom: 15px;
   }
   
@@ -49,12 +50,13 @@
   
   .detailsRating-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    background-color: #3b82f6;
-    border-radius: 6px;
-    padding: 6px 16px;
-    width: 5%;
-    margin-bottom: 15px;
+  }
+
+  .review{
+    padding-left: 15px;
+    font-size: 13px;
   }
   
   @media screen and (max-width: 768px) {
@@ -83,7 +85,6 @@
     font-size: 17px;
     font-family: 'Roboto';
     color: #616e7c;
-    /* padding-top: 20px; */
     padding-left: 30px;
     padding-right: 30px;
     font-weight: bold;
@@ -92,7 +93,7 @@
   .add-cart-button {
     height: 35px;
     width: 120px;
-    background-color: #3b82f6;
+    background-image: linear-gradient(90deg, #8d07a8, #c710be);
     border-width: 0px;
     outline: none;
     cursor: pointer;
